force-app/main/default/objects/Product_Goal__c/Product_Goal__c.object-meta.xml
<CustomObject>
    <label>Product Goal</label>
    <nameField>
        <label>Product Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>