force-app/main/default/objects/Product_Goal__c/fields/Goal_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Goal_Month_Year__c</fullName>
    <formula>CASE(MONTH( Month_Start_Date__c ),
1, &apos;January&apos;,
2, &apos;February&apos;,
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
12, &apos;December&apos;,&apos;&apos;
)+&apos; &apos;+TEXT(YEAR( Month_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Month/Year</label>
    <type>Text</type>
</CustomField>