force-app/main/default/objects/Product_Goal__c/fields/Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Date__c</fullName>
    <description>DATE(YEAR( Month_Start_Date__c ), MONTH( Month_Start_Date__c ) + 1 , 1 ) - 1</description>
    <formula>IF ( MONTH( Month_Start_Date__c )= 12,
 DATE( YEAR( Month_Start_Date__c ), MONTH( Month_Start_Date__c ), 31),
DATE(YEAR( Month_Start_Date__c ), MONTH( Month_Start_Date__c ) + 1 , 1 ) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month End Date</label>
    <type>Date</type>
</CustomField>