force-app/main/default/objects/Product_Goal__c/fields/Quarter_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Quarter_and_Year__c</fullName>
    <formula>&apos;Q&apos;+TEXT(Ceiling(Month( Month_Start_Date__c ) / 3 ))+&apos;-&apos; + TEXT(YEAR( Month_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter and Year</label>
    <type>Text</type>
</CustomField>