force-app/main/default/objects/Product_Goal__c/listViews/Acquired_Bridge_Product_Goals.listView-meta.xml
<ListView>
    <fullName>Acquired_Bridge_Product_Goals</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Acquired Bridge</value>
    </filters>
    <label>Acquired Bridge Product Goals</label>
</ListView>