force-app/main/default/objects/Product_Goal__c/listViews/Acquired_Term_Goals_This_Year.listView-meta.xml
<ListView>
    <fullName>Acquired_Term_Goals_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Product__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>Month_End_Date__c</columns>
    <columns>Quarter_and_Year__c</columns>
    <columns>Goal_Month_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Investor DSCR</value>
    </filters>
    <filters>
        <field>Goal_Month_Year__c</field>
        <operation>contains</operation>
        <value>2022</value>
    </filters>
    <label>Acquired Term Goals This Year</label>
</ListView>