force-app/main/default/objects/Product_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Product__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>Month_End_Date__c</columns>
    <columns>Quarter_and_Year__c</columns>
    <columns>Goal_Month_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>