force-app/main/default/objects/Product_Goal__c/listViews/Current_Month.listView-meta.xml
<ListView>
    <fullName>Current_Month</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Quarter_and_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Month_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Current Month</label>
</ListView>