force-app/main/default/objects/Product_Goal__c/listViews/Current_Quarter.listView-meta.xml
<ListView>
    <fullName>Current_Quarter</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Month_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>Current Quarter</label>
</ListView>