force-app/main/default/objects/Product_Goal__c/listViews/Term_Product_Goals.listView-meta.xml
<ListView>
    <fullName>Term_Product_Goals</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Quarter_and_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Term</value>
    </filters>
    <label>Term Product Goals</label>
</ListView>